Fix z-index of the fields on dashboard #225

--- a/plugins/plenamata-plugin/assets/.src/scss/pages/_dashboard.scss
+++ b/plugins/plenamata-plugin/assets/.src/scss/pages/_dashboard.scss
@@ -165,6 +165,7 @@ main .dashboard {
             .fields {
                 display: flex;
                 height: 100%;
+                z-index: 1;
 
                 > .custom-drop {
                     flex: 1 1 0px;
